--- a/client/src/components/BoardBar/BoardBar.scss
+++ b/client/src/components/BoardBar/BoardBar.scss
@@ -3,7 +3,7 @@
 .board-bar {
     font-size: $fontSize-basic;
     height: $app-bar-height;
-    margin-bottom: $gap-basic;
+    margin-bottom: $board-bar-mb;
     display: flex;
     align-items: center;
     justify-content: space-between;
